# FABRIK

./: README.md  linux packges
FABRIK/: CMakeLists.txt
FABRIK/libraries/glew-2.1.0/: glew.pc
FABRIK/src/: Target2D.cpp  camera.cpp  cameraModelProgram.cpp  cameraProgram.cpp  constraint2D.cpp  constraint3D.cpp  fabrik.cpp  fabrik2D.cpp  fabrik3D.cpp  fabrikAnimation.cpp  hinge2D.cpp  hinge3D.cpp  joint.cpp  joint2D.cpp  joint3D.cpp  main.cpp  mat4.cpp  mathf.cpp  matrix4.cpp  model.cpp  node.cpp  object.cpp  object2D.cpp  object3D.cpp  orthographicCamera.cpp  perspectiveCamera.cpp  quaternion.cpp  scene.cpp  segment.cpp  segment2D.cpp  segment3D.cpp  shaderProgram.cpp  target.cpp  target3D.cpp  transform.cpp  tree.cpp  twist3D.cpp  vector2.cpp  vector3.cpp  window.cpp
FABRIK/src/headers/: camera.h  cameraProgram.h  chain2D.h  color.h  constraint2D.h  constraint3D.h  fabrik.h  fabrik2D.h  fabrik3D.h  fabrikAnimation.h  hinge2D.h  hinge3D.h  joint.h  joint2D.h  joint3D.h  list.h  listElement.h  main.h  mat4.h  mathf.h  matrix4.h  model.h  modelProgram.h  node.h  object.h  object2D.h  object3D.h  orthographicCamera.h  perspectiveCamera.h  quaternion.h  scene.h  segment.h  segment2D.h  segment3D.h  shaderProgram.h  target.h  target2D.h  target3D.h  transform.h  tree.h  (+5 more)
FABRIK/src/shaders/: SimpleShader.fragment.glsl  SimpleShader.vertex.glsl
